controller、viewにTime_limit実装

--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -1,3 +1,8 @@
 ja:
   view:
     back: 戻る
+  date:
+    formats:
+      default: ! '%Y/%m/%d'
+      long: ! '%Y年%m月%d日(%a)'
+      short: ! '%m/%d'
