--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -6,3 +6,12 @@ ja:
       default: ! '%Y/%m/%d'
       long: ! '%Y年%m月%d日(%a)'
       short: ! '%m/%d'
+   helpers:
+    select:
+      prompt: 選択してください
+      include_blank: 選択
+    submit:
+      create: 登録する
+      submit: 保存する
+      update: 更新する
+      search: 検索する
