--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,11 @@
 ---
 ja:
+  enum:
+    Task:
+      to_do:
+        low: 低
+        medium: 中
+        high: 高
   view:
     back: 戻る
   activerecord:
